--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "FRONT prueba INNOCV",
   "main": "./app.jsx",
   "scripts": {
-    "server-dev": "webpack-dev-server --config=webpack.config.dev --mode production --host 0.0.0.0 "
+    "server-dev": "webpack-dev-server --config=webpack.config.dev --mode development --host 0.0.0.0 ",
+    "build-pro": "webpack --config=webpack.config.pro --mode production"
   },
   "author": "Ceelta",
   "license": "ISC",
-  "dependencies": {    
+  "dependencies": {
+    "remove-files-webpack-plugin": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
@@ -20,8 +22,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "sass-loader": "^12.4.0",
     "sass": "^1.49.7",
+    "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
