Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,4 +24,4 @@ steps:
     azureSubscription: 'WebDeployResource'
     Destination: 'AzureBlob'
     storage: 'calculatortest'
-    ContainerName: '$web'
+    ContainerName: 'web'
